--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:py="http://genshi.edgewall.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:py="http://genshi.edgewall.org/">
 	<xi:include href="base.html" />
 	<head>
 		<title>Dashboard</title>
 	</head>
 	<body>
 		<h1>Dashboard</h1>
+		
+
+		<div>
+			<h2>Virtual Machines</h2>
+			<table>
+				<tr>
+					<th>VM Name</th>
+					<th>Status</th>
+					<th>Disk Images</th>
+					<th>RAM</th>
+					<th>CPU Cores</th>
+					<th>Operations</th>
+				</tr>
+			</table>
+		</div>
+	
 	</body>
 </html>
