--- a/views/manage.html
+++ b/views/manage.html
@@ -12,6 +12,9 @@
 			
 			<h3>Last Launch</h3>
 			<p>${str(vm.last_launch)}</p>
+			
+			<h3>Status</h3>
+			<p><py:if test="vm.status()">Powered On</py:if><py:if test="not vm.status()">Powered Off</py:if></p>
 
 			<h3>Properties</h3>
 			<table>
@@ -25,7 +28,12 @@
 			</table>
 
 			<h3>Actions</h3>
-
+			<py:if test="vm.status()">
+				<form action="/poweroff" method="POST"><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Power Off VM" /></form>
+			</py:if>
+			<py:if test="not vm.status()">
+				<form action="/poweron" method="POST"><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Power On VM" /></form>
+			</py:if>
 		</py:if>
 	</body>
 </html>
