--- a/views/manage.html
+++ b/views/manage.html
@@ -14,7 +14,7 @@
 			<p>${str(vm.last_launch)}</p>
 			
 			<h3>Status</h3>
-			<p><py:if test="vm.status()">Powered On</py:if><py:if test="not vm.status()">Powered Off</py:if></p>
+			<p><py:if test="vm.status">Powered On</py:if><py:if test="not vm.status">Powered Off</py:if></p>
 
 			<h3>Properties</h3>
 			<table>
@@ -28,10 +28,10 @@
 			</table>
 
 			<h3>Actions</h3>
-			<py:if test="vm.status()">
+			<py:if test="vm.status">
 				<form action="/poweroff" method="POST"><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Power Off VM" /></form>
 			</py:if>
-			<py:if test="not vm.status()">
+			<py:if test="not vm.status">
 				<form action="/poweron" method="POST"><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Power On VM" /></form>
 			</py:if>
 		</py:if>
