--- a/views/manage.html
+++ b/views/manage.html
@@ -29,10 +29,10 @@
 
 			<h3>Actions</h3>
 			<py:if test="vm.status">
-				<form action="/poweroff" method="POST"><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Power Off VM" /></form>
+				<form action="/poweroff" method="POST"><input type="hidden" name="token" value="${token.token}" /><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Power Off VM" /></form>
 			</py:if>
 			<py:if test="not vm.status">
-				<form action="/poweron" method="POST"><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Power On VM" /></form>
+				<form action="/poweron" method="POST"><input type="hidden" name="token" value="${token.token}" /><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Power On VM" /></form>
 			</py:if>
 		</py:if>
 	</body>
