--- a/views/manage.html
+++ b/views/manage.html
@@ -15,7 +15,7 @@
 			
 			<h3>Status</h3>
 			<p><py:if test="vm.status">Powered On</py:if><py:if test="not vm.status">Powered Off</py:if></p>
-
+			${vm.status}
 			<h3>Properties</h3>
 			<table>
 				<py:for each="property in vm.properties">
@@ -30,6 +30,7 @@
 			<h3>Actions</h3>
 			<py:if test="vm.status">
 				<form action="/poweroff" method="POST"><input type="hidden" name="token" value="${token.token}" /><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Power Off VM" /></form>
+				<form action="/resetvm" method="POST"><input type="hidden" name="token" value="${token.token}" /><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Reset VM" /></form>
 				<form action="/mountiso" method="POST"><input type="hidden" name="token" value="${token.token}" /><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Insert Virtual CDROM" /></form>
 			</py:if>
 			<py:if test="not vm.status">
