--- a/views/login.html
+++ b/views/login.html
@@ -5,21 +5,27 @@
 		<title>Login</title>
 	</head>
 	<body>
-		<h1>Login</h1>
-		<div>
+		<h1 class="login_header">Login</h1>
+		<div class="loginbox">
 			<form action="/login" method="POST">
 				<table>
 					<tr>
-						<td>Username</td>
-						<td><input type="text" name="username" /></td>
+						<td class="infobox" colspan="2">
+							
+							Please enter your Redbrick VM username and password below. This is a different account to your main Redbrick login; please ask an admin if you need an account.
+						</td>
 					</tr>
 					<tr>
-						<td>Password</td>
-						<td><input type="password" name="password" /></td>
+						<td class="head">Username</td>
+						<td><input class="text" type="text" name="username" /></td>
+					</tr>
+					<tr>
+						<td class="head">Password</td>
+						<td><input class="text" type="password" name="password" /></td>
 					</tr>
 					<tr>
 						<td colspan="2">
-							<input type="submit" value="Log In" />
+							<input class="btn" type="submit" value="Log In" />
 						</td>
 					</tr>
 				</table>
