--- a/views/manage.html
+++ b/views/manage.html
@@ -6,35 +6,37 @@
 	</head>
 	<body>
 		<h1>Manage VM</h1>
-		<py:if test="vm">	
-			<h3>VM Name</h3>
-			<p>${vm.name}</p>
-			
-			<h3>Last Launch</h3>
-			<p>${str(vm.last_launch)}</p>
-			
-			<h3>Status</h3>
-			<p><py:if test="vm.status">Powered On</py:if><py:if test="not vm.status">Powered Off</py:if></p>
-			<h3>Properties</h3>
-			<table>
+		<py:if test="vm">
+			<table class="vm_info">
+				<tr><td class="head">VM Name</td><td>${vm.name}</td><td class="head">RAM</td><td>${vm.memory}MB</td></tr>
+				<tr><td class="head">Last Launch</td><td>${vm.last_launch}</td><td class="head">CPU Cores</td><td>${vm.cpu_cores}</td></tr>
 				<py:for each="property in vm.properties">
-					<tr>
-						<td class="vm_key">${property.key}</td>
-						<td class="vm_value">${property.value}</td>
-						<td class="vm_help"><a href="/help?s=${property.key}">?</a></td>
-					</tr>
+					<tr><td class="head">Disk Image</td><td colspan="3">${property.value}</td></tr>
 				</py:for>
+				<tr><td class="head">Status</td><td colspan="3"><py:if test="vm.status is True">Powered On</py:if><py:if test="vm.status is False">Powered Off</py:if></td></tr>
 			</table>
-
+			
 			<h3>Actions</h3>
-			<py:if test="vm.status">
-				<form action="/poweroff" method="POST"><input type="hidden" name="token" value="${token.token}" /><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Power Off VM" /></form>
-				<form action="/resetvm" method="POST"><input type="hidden" name="token" value="${token.token}" /><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Reset VM" /></form>
-				<form action="/mountiso" method="POST"><input type="hidden" name="token" value="${token.token}" /><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Insert Virtual CDROM" /></form>
-			</py:if>
-			<py:if test="not vm.status">
-				<form action="/poweron" method="POST"><input type="hidden" name="token" value="${token.token}" /><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Power On VM" /></form>
-			</py:if>
+			<table class="vm_actions">
+				<tr>
+					<py:if test="vm.status is True">
+						<td>
+							<form action="/poweroff" method="POST"><input type="hidden" name="token" value="${token.token}" /><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Power Off VM" /></form>
+						</td>
+						<td>
+							<form action="/resetvm" method="POST"><input type="hidden" name="token" value="${token.token}" /><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Reset VM" /></form>
+						</td>
+						<td>
+							<form action="/mountiso" method="POST"><input type="hidden" name="token" value="${token.token}" /><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Insert Virtual CDROM" /></form>
+						</td>
+					</py:if>
+					<py:if test="vm.status is False">
+						<td>
+							<form action="/poweron" method="POST"><input type="hidden" name="token" value="${token.token}" /><input type="hidden" name="id" value="${vm.id}" /><input type="submit" value="Power On VM" /></form>
+						</td>
+					</py:if>
+				</tr>
+			</table>
 		</py:if>
 	</body>
 </html>
