--- a/views/changebootorder.html
+++ b/views/changebootorder.html
@@ -6,6 +6,6 @@
 	</head>
 	<body>
 		<h1>Change VM boot device</h1>
-		<p py:if="error is None">The VM boot device has changed. Click <a href="/">here</a> to return to the home screen.</p>
+		<p py:if="error is None">The VM boot device has changed. Click <a href="/manage?id=${vm.id}">here</a> to return to the home screen.</p>
 	</body>
 </html>
