Removed all old ui/kvm code, added stuff for shiny new UI/RPC calls/libvirt

--- a/static/global.css
+++ b/static/global.css
@@ -230,3 +230,9 @@ table.formtable td.actions input {
     background-color : #c00;
     color : #fff;
 }
+
+
+div.loader {
+    text-align : center;
+    margin : 5em;
+}
